fixed header sizing/misalignment in both mobile and web view

--- a/css/individualProjectPage.css
+++ b/css/individualProjectPage.css
@@ -67,8 +67,19 @@ h2{
 .header_logo {
     font-family: 'Brightness1';
     margin: 0;
-    padding-top: 70px;
+    padding-top: 45px;
     font-size: 70px;
+    color: #ffffff;
+    transition: .3s;
+    padding-left: 50px;
+    padding-right: 130px;
+}
+
+.header_logo_long {
+    font-family: 'Brightness1';
+    margin: 0;
+    padding-top: 45px;
+    font-size: 52px;
     color: #ffffff;
     transition: .3s;
     padding-left: 50px;
@@ -77,7 +88,13 @@ h2{
 
 .header.small .header_logo {
     padding-top: 10px;
-    font-size: 30px;
+    font-size: 35px;
+    text-shadow: none;
+}
+
+.header.small .header_logo_long {
+    padding-top: 10px;
+    font-size: 35px;
     text-shadow: none;
 }
 
@@ -490,8 +507,8 @@ h2{
     .header_logo {
         font-family: 'Brightness1';
         margin: 0;
-        padding-top: 70px;
-        font-size: 50px;
+        padding-top: 50px;
+        font-size: 30px;
         color: #ffffff; 
         transition: .3s;
         padding-left: 10px;
@@ -501,7 +518,28 @@ h2{
     
     .header.small .header_logo {
         padding-top: 50px;
-        font-size: 30px;
+        font-size: 25px;
+        text-shadow: none;
+        padding-left: 10px;
+        padding-right: 10px;
+        height: fit-content;
+    }
+
+    .header_logo_long {
+        font-family: 'Brightness1';
+        margin: 0;
+        padding-top: 50px;
+        font-size: 27px;
+        color: #ffffff; 
+        transition: .3s;
+        padding-left: 10px;
+        padding-right: 10px;
+        height: fit-content;
+    }
+    
+    .header.small .header_logo_long {
+        padding-top: 50px;
+        font-size: 22px;
         text-shadow: none;
         padding-left: 10px;
         padding-right: 10px;
